<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".info"
    android:background="#F5F5F5">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="50dp">
        <RelativeLayout
            android:id="@+id/ret"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_marginBottom="50dp"
            android:background="@drawable/profile">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_centerInParent="true"
                android:src="@drawable/carpro" />
        </RelativeLayout>
        <TextView
            android:id="@+id/txt1"
            android:layout_below="@id/ret"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"/>
        <TextView
            android:id="@+id/txt2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info2"
            android:layout_below="@id/txt1"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"/>
        <TextView
            android:layout_marginLeft="10dp"
            android:id="@+id/txt3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cree"
            android:layout_marginTop="20dp"
            android:layout_below="@id/txt2"/>
        <TextView
            android:id="@+id/txt4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/txt3"
            android:layout_below="@id/txt2"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="5dp"
            android:text="@string/abdo"
            android:textColor="#000"/>
        <TextView
            android:layout_marginLeft="10dp"
            android:id="@+id/txt5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/idée"
            android:layout_marginTop="20dp"
            android:layout_below="@id/txt4"/>
        <TextView
            android:id="@+id/txt6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/txt5"
            android:layout_below="@id/txt4"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="5dp"
            android:text="@string/karima"
            android:textColor="#000"/>
    </RelativeLayout>
</ScrollView>