<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    tools:context=".MainActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="30dp">
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputemail"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit1"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="19dp"
                    android:paddingLeft="7dp"
                    android:inputType="textEmailAddress"
                    android:layout_alignParentTop="true"
                    android:hint="@string/e_mail_utilisateur"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputpasword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                app:passwordToggleEnabled="true"
                android:layout_below="@id/inputemail">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit2"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="19dp"
                    android:paddingLeft="7dp"
                    android:hint="@string/motdepasse"
                    android:inputType="textPassword"/>
            </com.google.android.material.textfield.TextInputLayout>
            <TextView
                android:id="@+id/mot1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/inputpasword"
                android:text="@string/motdepasseoublie"
                android:textColor="@color/motdepasse"
                android:layout_marginTop="30dp"
                android:textSize="17dp" />
            <Button
                android:id="@+id/btnlogin"
                android:text="@string/connection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/mot1"
                android:background="@drawable/buttonhover"
                android:textColor="#fff"
                android:onClick="login"
                android:layout_marginTop="30dp" />
            <Button
                android:id="@+id/btncree"
                android:text="@string/enregestriecompte"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/btnlogin"
                android:layout_marginTop="10dp"
                android:onClick="signup"
                android:textColor="@color/motdepasse"
                android:foreground="?android:attr/selectableItemBackground"
                android:background="@drawable/buttoncree"/>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>