<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".changer_password" >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="20dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:layout_marginBottom="50dp"
                android:background="@drawable/profile">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:layout_centerInParent="true"
                    android:src="@drawable/carpro" />
            </RelativeLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/anciennepass"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                app:passwordToggleEnabled="true"
                android:layout_below="@id/inputemail">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit1"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="19dp"
                    android:paddingLeft="7dp"
                    android:hint="@string/anncienemotdepasse"
                    android:inputType="textPassword"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputpasword"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                app:passwordToggleEnabled="true"
                android:layout_below="@id/inputemail">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit2"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="19dp"
                    android:paddingLeft="7dp"
                    android:hint="@string/creemotdepasse"
                    android:inputType="textPassword"/>
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputpasword2"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:errorEnabled="true"
                app:passwordToggleEnabled="true"
                android:layout_below="@id/inputpasword">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit3"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="19dp"
                    android:paddingLeft="7dp"
                    android:hint="@string/creemotdepasse2"
                    android:inputType="textPassword"/>
            </com.google.android.material.textfield.TextInputLayout>
                <Button
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Changer"
                    android:id="@+id/button7"
                    android:background="@drawable/buttonhover"
                    android:textColor="#fff"
                    android:layout_marginTop="40dp"
                    android:layout_weight="1"
                    android:onClick="changer"/>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>